# D100_ps1_ex2

./: .gitignore  README.md  environment.yml  gdp_analysis.ipynb  pyproject.toml
fed/: data.py  plot_utils.py
